# camera_calibration

./: .gitignore  README.md  TODO.md  absolute_radiometry.py  all_gain.py  bias.py  bias_characterise.py  bias_map.py  bias_ron_multi.py  branch_info.md  calculate_xyz_matrix.py  dark.py  dark_ADU.py  dark_electrons.py  dng_jpg.py  example.json  filtercurves.py  flat.py  flat_characterise.py  flat_compare.py  format_results.py  gain.py  gain2.py  gain_all.py  gain_calculate_map.py  gain_iso.py  gain_iso_comparison.py  gain_iso_exif.py  gain_iso_relation.py  gain_plot.py  gain_plot_map.py  gain_plot_map_multiple.py  gain_ron.py  gain_single_iso.py  gamma_all.py  gamma_find_angle.py  gamma_multi.py  gamma_one.py  grating_transmission.py  import_dng.py  (+92 more)
analysis/: README.md  bias_characterise.py  dark_characterise_ADU.py  dark_characterise_electrons.py  dark_electrons.py  flat_compare.py  flatfield_characterise_data.py  flatfield_compare_maps.py  flatfield_compare_model_parameters.py  gain_characterise.py  gain_characterise_multiple.py  gain_iso_relation.py  gain_plot_map.py  iso_compare_cameras.py  iso_normalisation.py  iso_normalisation_multiple.py  iso_normalisation_single.py  jpeg_sRGB_characterise_model.py  jpeg_sRGB_comparison_plot.py  jpeg_sRGB_comparison_plot_multiple.py  jpeg_sRGB_gamma_fixed.py  jpeg_sRGB_gamma_free.py  jpeg_sRGB_plot_gamma.py  jpeg_sRGB_plot_gamma_multiple.py  linearity_characterise.py  linearity_characterise_multiple.py  linearity_characterise_multiple_cameras.py  linearity_characterize_r_multiple.py  linearity_jpeg.py  linearity_jpeg_sRGB_plot.py  (+33 more)
(+194 files in other folders)
