[metadata]
name = pyspectacle
version = 3.1.2
author = Olivier Burggraaff
author_email = burggraaff@strw.leidenuniv.nl
description = SPECTACLE camera calibration module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monocle-h2020/camera_calibration
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
packages = spectacle
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    rawpy
    exifread
    astropy

[options.packages.find]
where =
