[metadata]
name = pyspectacle
version = 3.2.0-dev
author = Olivier Burggraaff
author_email = olivierburggraaff@gmail.com
description = SPECTACLE camera calibration module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monocle-h2020/camera_calibration
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
packages = spectacle
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    rawpy
    exifread
    astropy
    tqdm

[options.packages.find]
where =
